@@ -6,6 +6,10 @@ Here is a history of user visible changes to Mailman.
 
 2.1.10 (XX-XXX-200X)
 
+  Bug fixes and other patches
+
+    - Fixed admin.py so null VARHELP category is handled (1573393).
+
 2.1.9 (12-Sep-2006)
 
   Security
